tests/Unit/PHPStan/Rules/Fixtures/SingleClassPerFile/Valid/SingleClass.php
<?php

declare(strict_types=1);

namespace SquidIT\Tests\PhpCodingStandards\Unit\PHPStan\Rules\Fixtures\SingleClassPerFile\Valid;

class SingleClass {}
