tests/Unit/PHPStan/Rules/Fixtures/SingleClassPerFile/Invalid/TwoTraits.php
<?php

declare(strict_types=1);

namespace SquidIT\Tests\PhpCodingStandards\Unit\PHPStan\Rules\Fixtures\SingleClassPerFile\Invalid;

trait TwoTraitsFirst {}

trait TwoTraitsSecond {}
